--- a/docs/team/shannonwong.adoc
+++ b/docs/team/shannonwong.adoc
@@ -2,11 +2,11 @@
 :imagesDir: ../images
 :stylesDir: ../stylesheets
 
-== PROJECT: Part-time Manager (PTMan)
+== PROJECT: Part-Time Manager (PTMan)
 
 == Overview
 
-PTMan is a desktop human resource application used for managing part-timer employees. +
+Part-Time Manager (PTMan) is a desktop human resource application used for managing part-timer employees. +
 
 PTMan aims to give part-time employees the freedom of choosing when they want to work by registering for the available time slots set by the employer. +
 
@@ -14,46 +14,43 @@ The user interacts with it using a CLI, and it has a GUI created with JavaFX. It
 
 == Summary of contributions
 
-* *Major enhancement*: added *the ability to undo/redo previous commands*
-** What it does: allows the user to undo all previous commands one at a time. Preceding undo commands can be reversed by using the redo command.
-** Justification: This feature improves the product significantly because a user can make mistakes in commands and the app should provide a convenient way to rectify them.
-** Highlights: This enhancement affects existing commands and commands to be added in future. It required an in-depth analysis of design alternatives. The implementation too was challenging as it required changes to existing commands.
-** Credits: _{mention here if you reused any code/ideas from elsewhere or if a third-party library is heavily used in the feature so that a reader can make a more accurate judgement of how much effort went into the feature}_
+* *Major enhancement*: Added the *shift* feature.
+** What it does: Allows employers to create work shifts. Employees can then apply for the shifts that they want to work in.
+** Justification: This feature allows for easy management of manpower while giving employees the freedom and flexibility to work whenever they want to.
+** Highlights: This enhancement modifies the app's model to store shifts.
+The storage component also had to be modified to save shifts to local storage.
+There were design considerations to integrate shifts into the existing model while minimizing coupling with the other components.
+To enable user interaction with this feature, various commands that manipulate shifts had to be implemented.
 
-* *Minor enhancement*: added a history command that allows the user to navigate to previous commands using up/down keys.
+* *Minor enhancement*: Added command aliases that are shorthands for the full commands.
 
-* *Code contributed*: [https://github.com[Functional code]] [https://github.com[Test code]] _{give links to collated code files}_
+* *Code contributed*: [https://github.com/CS2103JAN2018-W14-B2/main/blob/master/collated/functional/shanwpf.md[Functional code]]
+ [https://github.com/CS2103JAN2018-W14-B2/main/blob/master/collated/test/shanwpf.md[Test code]]
 
 * *Other contributions*:
 
 ** Project management:
-*** Managed releases `v1.3` - `v1.5rc` (3 releases) on GitHub
-** Enhancements to existing features:
-*** Updated the GUI color scheme (Pull requests https://github.com[#33], https://github.com[#34])
-*** Wrote additional tests for existing features to increase coverage from 88% to 92% (Pull requests https://github.com[#36], https://github.com[#38])
+*** Managed milestones and issue-tracking on GitHub.
 ** Documentation:
-*** Did cosmetic tweaks to existing contents of the User Guide: https://github.com[#14]
-** Community:
-*** PRs reviewed (with non-trivial review comments): https://github.com[#12], https://github.com[#32], https://github.com[#19], https://github.com[#42]
-*** Contributed to forum discussions (examples:  https://github.com[1], https://github.com[2], https://github.com[3], https://github.com[4])
-*** Reported bugs and suggestions for other teams in the class (examples:  https://github.com[1], https://github.com[2], https://github.com[3])
-*** Some parts of the history feature I added was adopted by several other class mates (https://github.com[1], https://github.com[2])
+*** Added cross-reference links to the User Guide and Developer Guide:
+ [https://github.com/CS2103JAN2018-W14-B2/main/pull/154[#154]]
+ [https://github.com/CS2103JAN2018-W14-B2/main/pull/159[#159]]
+*** Ensured that the language and format of the documentation are correct and consistent:
+ [https://github.com/CS2103JAN2018-W14-B2/main/pull/154[#154]]
 ** Tools:
-*** Integrated a third party library (Natty) to the project (https://github.com[#42])
-*** Integrated a new Github plugin (CircleCI) to the team repo
-
-_{you can add/remove categories in the list above}_
+*** Integrated TravisCI to the team repo.
+*** Integrated Coveralls to the team repo.
+*** Integrated Codacy to the team repo.
 
 == Contributions to the User Guide
-
 
 |===
 |_Given below are sections I contributed to the User Guide. They showcase my ability to write documentation targeting end-users._
 |===
 
-include::../UserGuide.adoc[tag=undoredo]
+include::../UserGuide.adoc[tag=shiftemployer]
 
-include::../UserGuide.adoc[tag=dataencryption]
+include::../UserGuide.adoc[tag=shiftemployee]
 
 == Contributions to the Developer Guide
 
@@ -61,6 +58,4 @@ include::../UserGuide.adoc[tag=dataencryption]
 |_Given below are sections I contributed to the Developer Guide. They showcase my ability to write technical documentation and the technical depth of my contributions to the project._
 |===
 
-include::../DeveloperGuide.adoc[tag=undoredo]
-
-include::../DeveloperGuide.adoc[tag=dataencryption]
+include::../DeveloperGuide.adoc[tag=shifts]
