--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -473,7 +473,7 @@ _<<fig-Announce2>>_ shows how PTMan should look like after the above command.
 .Successful announcement made in PTMan +
 image::Ui_announcement2.png[width="790"]
 
-
+// tag::shiftemployer[]
 [[Addshift]]
 ==== Adding a shift: `addshift`
 Adds a shift to the timetable to indicate that you require employees at that period. +
@@ -553,11 +553,13 @@ Examples:
 `unapply 6 3`
 * To remove employee `2` from shift `6`, type: +
 `unapply 2 6`
+// end::shiftemployer[]
 
 === Employee Commands
 If you are an employee, you are able to access these commands in addition to the shared commands.
 These employee commands require the use of your employee password.
 
+// tag::shiftemployee[]
 [[Apply-2]]
 ==== Applying for a shift: `apply`
 Applies for a shift. +
@@ -599,6 +601,7 @@ Examples:
 `unapply 4 3 pw/YOUR_PASSWORD`
 * If your index is `2` and you wish to unapply from shift `1`, type: +
 `unapply 2 1 pw/YOUR_PASSWORD`
+// end::shiftemployee[]
 
 [[Cp]]
 ==== Changing your password: `cp`
